--- a/site/_layouts/page.html
+++ b/site/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-{{ page.content | markdownify }}
+{{ content | markdownify }}
 <h3><a href="/">&lsaquo;&nbsp;&nbsp;back&nbsp;</a></h3>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
