--- a/site/_layouts/post.html
+++ b/site/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date_to_human_string }}</p>
-{{ page.content | markdownify }}
+{{ content | markdownify }}
 <h3><a href="/">&lsaquo;&nbsp;&nbsp;back&nbsp;</a></h3>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
